--- a/farmoptiai/src/app/globals.css
+++ b/farmoptiai/src/app/globals.css
@@ -23,12 +23,12 @@ li {
   align-items: center;
   justify-content: space-between;
   padding: 20px;
-  background-color: #004225;
-  color: #fff;
+  background-color: #A6CF98;
+  color: #000;
 }
 
 .nav-links a {
-  color: #fff;
+  color: #000;
 }
 
 /* LOGO */
@@ -50,7 +50,7 @@ li {
 }
 
 .menu li:hover {
-  background-color: #004225;
+  background-color: #A6CF98;
   border-radius: 5px;
   transition: 0.3s ease;
 }
@@ -65,7 +65,7 @@ li {
 }
 
 .dropdown {
-  background-color: #004225;
+  background-color: #A6CF98;
   padding: 1em 0;
   position: absolute; /*WITH RESPECT TO PARENT*/
   display: none;
@@ -84,7 +84,7 @@ li {
 }
 
 .dropdown li:hover {
-  background-color: #004225;
+  background-color: #A6CF98;
 }
 
 .services:hover .dropdown {
@@ -110,7 +110,7 @@ input[type=checkbox] {
  .menu {
     display:none;
     position: absolute;
-    background-color:#004225;
+    background-color:#A6CF98;
     right: 0;
     left: 0;
     text-align: center;
@@ -119,7 +119,7 @@ input[type=checkbox] {
 
   .menu li:hover {
     display: inline-block;
-    background-color:#004225;
+    background-color:#A6CF98;
     transition: 0.3s ease;
   }
 
@@ -142,7 +142,7 @@ input[type=checkbox] {
   }
 
   .dropdown li:hover {
-    background-color: #004225;
+    background-color: #A6CF98;
   }
 }
 .logoImage{
