--- a/farmoptiai/src/app/page.module.css
+++ b/farmoptiai/src/app/page.module.css
@@ -2,7 +2,13 @@
   display: grid;
   grid-template-columns:  100%;
   grid-template-rows: max-content;
-
+}
+@media screen and (max-width:790px) {
+  .main{
+    display: grid;
+    grid-template-columns: 100%;
+    grid-template-rows: max-content;
+  }
 }
 .home{
   grid-row: 1;
@@ -13,44 +19,34 @@
   margin-top: 6rem;
   display: flex;
   justify-content: center;
-}
-.homeConatiner{
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  width: 100%;
-  margin: 1rem;
-  justify-content: space-between;
   align-items: center;
+  display: flex;
 }
-@media screen and (max-width:790px){
-  .homeConatiner{
+.homeContent{
+  /* display: flex;
+  align-items: flex-start;
+  justify-content: flex-start;
+  flex-direction: column; */
+  width: 50%;
+  margin: 1rem;
+}
+@media screen and (max-width: 790px){
+  .home{
     flex-direction: column;
-    justify-content: center;
-    width: 100%;
+    padding: 2rem;
   }
   .homeContent{
-    justify-content: center;
-    align-items: flex-start;
     width: 100%;
+    box-sizing: border-box;
+    margin: 1rem;
   }
   .homeimage{
     width: 200px;
     height: 200px;
     object-fit: none;
   }
-  .paragraph{
-    font-size: 1rem;
-    width: 90%;
-  }
 }
-.homeContent{
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-  flex-direction: column;
-  width: 50%;
-}
+
 .Typewriter{
   font-size: 3rem;
   font-family: Georgia, 'Times New Roman', Times, serif;
@@ -67,8 +63,7 @@
   object-fit: contain;
 }
 .paragraph{
-  display: flex;
   align-items: center;
   justify-content: flex-start;
-  width: 80%;
+  width: 100%;
 }
