--- a/farmoptiai/src/app/page.module.css
+++ b/farmoptiai/src/app/page.module.css
@@ -67,3 +67,36 @@
   justify-content: flex-start;
   width: 100%;
 }
+/* Styling for About Us Page */
+.about{
+  display: flex;
+  width: 100%;
+  box-sizing: border-box;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.aboutContent{
+  width: 50%;
+}
+.coverImage{
+  width: 100%;
+  height: 30rem;
+}
+.heading{
+  margin: 1rem;
+  font-family:Gabriola;
+  font-weight: bold;
+}
+@media screen and (max-width: 790px){
+  .about{
+    flex-direction: column;
+  }
+  .aboutContent{
+    width: 100%;
+    height: fit-content;
+    margin-top: 0rem;
+  }
+  .coverImage{
+    height: 15rem;
+  }
+}
