--- a/farmoptiai/src/app/globals.css
+++ b/farmoptiai/src/app/globals.css
@@ -155,3 +155,54 @@ input[type=checkbox] {
   width: 30px;
   margin: 1rem;
 }
+/* footer styling */
+.footer{
+  background-image: linear-gradient(to bottom,#ffffff);
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+.linkText{
+  text-decoration: none;
+  color: #000;
+  margin: 0.5rem;
+  font-family: gabriola;
+  font-weight: bold;
+  width: fit-content;
+}
+.footerImage{
+  width: 100%;
+  object-fit: cover;
+  /* filter: blur(3px); */
+}
+.linkTextpoint{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+.linkTextpoints{
+  color: #000;
+  margin: 0.5rem;
+  font-family: gabriola;
+  font-weight: bold;
+  width: fit-content;
+  list-style:disc;
+}
+.footerContainer{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+}
+.footerContent{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+}
+@media (max-width:768px) {
+  .footerContainer{
+    flex-direction: column;
+  }
+}
