--- a/farmoptiai/src/app/globals.css
+++ b/farmoptiai/src/app/globals.css
@@ -46,7 +46,11 @@ li {
   align-items: center;
   justify-content: center;
 }
-
+@media (max-width:790px){
+  .logo{
+        font-size: 20px;
+  }
+}
 /* NAVBAR MENU */
 .menu {
   display: flex;
