--- a/farmoptiai/src/app/page.module.css
+++ b/farmoptiai/src/app/page.module.css
@@ -102,3 +102,107 @@
     height: 15rem;
   }
 }
+/* Services style */
+.services{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+  /* align-items: center; */
+  justify-content: center;
+}
+.serviceContent1{
+  background-image: url("../../public/inputBackgroundImage1.jpg");
+  /* filter: blur(2px); */
+  /* -webkit-filter: blur(2px); */
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0.5rem;
+}
+.servicesform{
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0, 0.4); 
+  color: white; 
+  backdrop-filter: blur(8px);
+  border-radius: 12px;
+  filter: drop-shadow(10px 10px 10px #000);
+  font-weight: bold;
+  border: 1px solid #f1f1f1; 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+  width: 80%;
+  padding: 20px;
+  text-align: center;
+  height: fit-content;
+  margin: 1rem;
+}
+.input{
+  border: none;
+  padding: 0.4rem;
+  border-radius: 8px 8px 8px 8px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  font-style: italic;
+  width: 100%;
+  color: #000;
+  margin: 0.5rem;
+  background-color: #ffffff;
+  height: 2rem;
+}
+
+.input :active{
+  border: none;
+}
+.form{
+  width: 100%;
+}
+.inputText{
+  border: none;
+  padding: 0.4rem;
+  border-radius: 8px 8px 8px 8px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  font-style: italic;
+  width: 70%;
+  color: #ffffff;
+  margin: 0.4rem;
+}
+@media (max-width:790px){
+  .inputText{
+    font-size: small;
+  }
+}
+.serviceContent2{
+  background-image: url("../../public/farm.webp");
+  /* filter: blur(2px); */
+  /* -webkit-filter: blur(2px); */
+  /* background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover; */
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 0.5rem ;
+}
+.inputButton{
+  border: none;
+  padding: 0.4rem;
+  border-radius: 8px 8px 8px 8px;
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+  font-style: italic;
+  width: 35%;
+  color: #000;
+  margin: 0.4rem;
+  background-image: url("../../public/footer.png");
+}
