--- a/farmoptiai/src/app/page.module.css
+++ b/farmoptiai/src/app/page.module.css
@@ -145,6 +145,9 @@
   margin: 1rem;
 }
 .input{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
   border: none;
   padding: 0.4rem;
   border-radius: 8px 8px 8px 8px;
@@ -155,7 +158,8 @@
   color: #000;
   margin: 0.5rem;
   background-color: #ffffff;
-  height: 2rem;
+  height: fit-content;
+  justify-content: center;
 }
 
 .input :active{
